# hh-skill-parser

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  parse_skills.py  pyproject.toml  queries.txt  requirements.txt  skills_whitelist.txt
tests/: test_smoke.py
